// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feature /> renders the <Feature /> with just a subtitle 1`] = `
<div
  class="feature__Container-sc-17uyeqc-0 bvAA-dh"
>
   
  <h2
    class="feature__SubTitle-sc-17uyeqc-2 kqjfyS"
  >
    Join us Now!
  </h2>
</div>
`;

exports[`<Feature /> renders the <Feature /> with just a title 1`] = `
<div
  class="feature__Container-sc-17uyeqc-0 bvAA-dh"
>
   
  <h1
    class="feature__Title-sc-17uyeqc-1 SngDu"
  >
     
    Unlimited films and series.
     
  </h1>
</div>
`;

exports[`<Feature /> renders the <Feature /> with populated data 1`] = `
<div
  class="feature__Container-sc-17uyeqc-0 bvAA-dh"
>
   
  <h1
    class="feature__Title-sc-17uyeqc-1 SngDu"
  >
     
    Unlimited films and series.
     
  </h1>
  <h2
    class="feature__SubTitle-sc-17uyeqc-2 kqjfyS"
  >
    Join us Now!
  </h2>
</div>
`;
